<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingBottom="3dp"
    android:paddingTop="3dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        >
        <ImageView
            android:id="@+id/item_search_response_thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/item_search_response_thumbnail_description"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_search_response_short"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/item_search_response_thumbnail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingStart="6dp"
            >

            <TextView
                android:id="@+id/item_search_response_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/item_search_response_title"
                android:textAlignment="textStart"
                android:textColor="#EFEFEF"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <TextView-->
<!--                android:id="@+id/shows_item_rating"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textStyle="bold"-->
<!--                android:text="6.6"-->
<!--                app:layout_constraintTop_toBottomOf="@id/item_search_response_title"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:drawableStartCompat="@drawable/ic_baseline_star_24"/>-->
            <TextView
                android:id="@+id/item_search_response_podcast_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_search_response_podcast_title"
                android:textColor="#FFA1A1A1"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_search_response_title" />
<!--            <TextView-->
<!--                android:id="@+id/shows_item_status"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintTop_toBottomOf="@id/item_search_response_title"-->
<!--                app:layout_constraintLeft_toRightOf="@id/item_search_response_podcast_title"-->
<!--                app:layout_constraintRight_toLeftOf="@id/shows_item_rating"-->
<!--                />-->
            <TextView
                android:id="@+id/item_search_response_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="@string/item_search_response_by"
                android:textColor="#FFA1A1A1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_search_response_podcast_title"
                />

            <TextView
                android:id="@+id/item_search_response_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:text="@string/item_search_response_publisher"
                android:textColor="#FFA1A1A1"
                android:textStyle="bold|italic"
                app:layout_constraintLeft_toRightOf="@id/item_search_response_by"
                app:layout_constraintTop_toBottomOf="@id/item_search_response_podcast_title" />
<!--            <TextView-->
<!--                android:id="@+id/shows_item_premiered"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintLeft_toRightOf="@id/item_search_response_by"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/shows_item_status"-->
<!--                />-->

<!--            <TextView-->
<!--                android:id="@+id/shows_item_type_label"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/shows_item_type_label"-->
<!--                android:textStyle="bold"-->
<!--                android:paddingStart="5dp"-->
<!--                android:paddingEnd="5dp"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/item_search_response_by"-->
<!--                />-->
<!--            <TextView-->
<!--                android:id="@+id/shows_item_type"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintLeft_toRightOf="@id/shows_item_type_label"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/shows_item_premiered"-->
<!--                />-->

<!--            <TextView-->
<!--                android:id="@+id/shows_item_language_label"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/shows_item_language_label"-->
<!--                android:textStyle="bold"-->
<!--                android:paddingStart="5dp"-->
<!--                android:paddingEnd="5dp"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/shows_item_type_label"-->
<!--                />-->
<!--            <TextView-->
<!--                android:id="@+id/shows_item_language"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintLeft_toRightOf="@id/shows_item_language_label"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/shows_item_type"-->
<!--                />-->

<!--            <TextView-->
<!--                android:id="@+id/shows_item_continue_label"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/shows_item_continue_label"-->
<!--                android:textAlignment="textEnd"-->
<!--                android:paddingStart="5dp"-->
<!--                android:paddingEnd="5dp"-->
<!--                android:paddingBottom="10dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                />-->

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>